--- a/flutter_app/flutter_application_1/pubspec.yaml
+++ b/flutter_app/flutter_application_1/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   webview_flutter: ^4.0.7 #^2.12.0#0.3.22+1
   flutter_webview_plugin: ^0.4.0
+  shelf: ^1.4.1
+  shelf_static: ^1.1.2
 
 
 dev_dependencies:
